; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_st_stuff.c_ST_Start.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_st_stuff.c_ST_Start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@st_stopped = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ST_Start() #0 {
  %1 = load i32, i32* @st_stopped, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i32 (...) @ST_Stop()
  br label %5

5:                                                ; preds = %3, %0
  %6 = call i32 (...) @ST_initData()
  %7 = call i32 (...) @ST_createWidgets()
  store i32 0, i32* @st_stopped, align 4
  ret void
}

declare dso_local i32 @ST_Stop(...) #1

declare dso_local i32 @ST_initData(...) #1

declare dso_local i32 @ST_createWidgets(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
